--- a/08_css-grid/main/scss/_media1350.scss
+++ b/08_css-grid/main/scss/_media1350.scss
@@ -123,6 +123,11 @@
       width: 350px;
     }
 
+    &__btn-adress {
+      top: auto;
+      bottom: 50px;
+    }
+
     &__tel {
       position: absolute;
       bottom: 19px;
