--- a/08_css-grid/main/css/style.css
+++ b/08_css-grid/main/css/style.css
@@ -118,6 +118,10 @@
   .contacts__adr {
     width: 350px;
   }
+  .contacts__btn-adress {
+    top: auto;
+    bottom: 50px;
+  }
   .contacts__tel {
     position: absolute;
     bottom: 19px;
@@ -343,6 +347,10 @@ body {
   .contacts__adr {
     width: 350px;
   }
+  .contacts__btn-adress {
+    top: auto;
+    bottom: 50px;
+  }
   .contacts__tel {
     position: absolute;
     bottom: 19px;
@@ -483,6 +491,10 @@ body {
   .contacts__adr {
     width: 350px;
   }
+  .contacts__btn-adress {
+    top: auto;
+    bottom: 50px;
+  }
   .contacts__tel {
     position: absolute;
     bottom: 19px;
@@ -622,6 +634,10 @@ body {
   }
   .contacts__adr {
     width: 350px;
+  }
+  .contacts__btn-adress {
+    top: auto;
+    bottom: 50px;
   }
   .contacts__tel {
     position: absolute;
@@ -847,6 +863,10 @@ body {
   }
   .contacts__adr {
     width: 350px;
+  }
+  .contacts__btn-adress {
+    top: auto;
+    bottom: 50px;
   }
   .contacts__tel {
     position: absolute;
@@ -899,9 +919,6 @@ body {
   .header__search {
     justify-self: auto;
     padding-left: calc(100% - 25px - var(--paddingContainer));
-  }
-  .header__form {
-    top: 35px;
   }
   .header .search-open {
     width: 23px;
@@ -1085,10 +1102,10 @@ body {
     width: calc(100% - var(--paddingContainer) * 3);
   }
   .header__list {
-    visibility: hidden;
+    display: none;
     position: absolute;
     top: 0;
-    left: 0;
+    left: -100%;
     right: 0;
     height: 100vh;
     grid-template: initial;
@@ -1098,7 +1115,18 @@ body {
     padding-left: var(--paddingContainer);
     justify-items: flex-start;
     margin-bottom: 212px;
-    transition: visibility 0.3s ease-in-out;
+    animation: burger 1s 1;
+    animation-fill-mode: forwards;
+    animation-delay: 0.3s;
+    transition: 1s;
+  }
+  @keyframes burger {
+    0% {
+      transform: none;
+    }
+    100% {
+      transform: translateX(100%);
+    }
   }
   .header__list .tel-head {
     display: block;
@@ -1119,7 +1147,7 @@ body {
     align-items: center;
   }
   .header .burger--active {
-    visibility: visible;
+    display: grid;
   }
   .header .close--active {
     display: block;
@@ -1379,9 +1407,24 @@ body {
 }
 .header .search-open {
   display: none;
+  fill: #999999;
+}
+.header .search-open circle {
+  fill: #999999;
+  transition: fill 0.3s ease-in-out;
+}
+.header .search-open:hover circle {
+  fill: #FF6E30;
 }
 .header .search--open {
   display: none;
+}
+.header .search-close path {
+  fill: white;
+  transition: fill 0.3s ease-in-out;
+}
+.header .search-close:hover path {
+  fill: #FF6E30;
 }
 .header .search--close {
   display: block;
@@ -1429,13 +1472,24 @@ body {
 }
 .header__form {
   position: absolute;
+  top: 0;
   right: calc(var(--paddingContainer) + 25px);
-  visibility: hidden;
-  transition: visibility 0.3s ease-in-out;
+  display: none;
   background-color: #202020;
+  animation: form 1s 1;
+  animation-fill-mode: forwards;
+  transition: 1s;
+}
+@keyframes form {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(150%);
+  }
 }
 .header .form--active {
-  visibility: visible;
+  display: block;
 }
 .header__input {
   font-family: "TTFirsNeue";
@@ -1521,6 +1575,8 @@ body {
 .work__right {
   display: grid;
   gap: 18px;
+  grid-template-columns: 1fr;
+  grid-template-rows: min-content;
 }
 .work__head {
   margin: 0;
@@ -1534,8 +1590,11 @@ body {
 .work__list {
   display: grid;
   grid-template-columns: repeat(2, auto);
-  grid-template-rows: repeat(1, auto);
   gap: 30px;
+}
+.work__list img {
+  max-width: 100%;
+  min-height: 100%;
 }
 .work__item:nth-child(1) {
   grid-column: 1/span 2;
@@ -1824,6 +1883,10 @@ body {
   line-height: 22px;
   color: #999999;
 }
+.contacts__label {
+  position: relative;
+  width: 100%;
+}
 .contacts__form {
   display: grid;
   position: relative;
@@ -1842,8 +1905,10 @@ body {
 }
 .contacts__form .just-validate-error-field {
   border: 1px solid #FF3030;
+  background-color: #E9E9E9 !important;
 }
 .contacts__input, .contacts__textarea {
+  width: 100%;
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
@@ -1853,8 +1918,11 @@ body {
   outline: none;
   background-color: #E9E9E9;
 }
-.contacts__textarea {
+.contacts__label-textarea {
   grid-row: 3/span 3;
+}
+.contacts__textarea {
+  height: 100%;
 }
 .contacts__input::placeholder, .contacts__textarea::placeholder {
   color: #CACACA;
@@ -1883,6 +1951,39 @@ body {
   border: none;
   width: 126px;
 }
+.contacts__btn-adress {
+  background-color: transparent;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  border: none;
+  outline: none;
+  z-index: 1;
+  opacity: 0;
+  display: none;
+  animation: show 1s 1;
+  animation-fill-mode: forwards;
+  animation-delay: 1s;
+  transition: 1s;
+}
+@keyframes show {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.contacts .btn--active {
+  display: block;
+}
+.contacts__btn-svg {
+  width: 50px;
+  height: 50px;
+}
 .contacts__address {
   font-style: normal;
   position: absolute;
@@ -1898,6 +1999,8 @@ body {
   padding-top: 179px;
   padding-left: 60px;
   padding-right: 50px;
+  transform: none;
+  transition: transform 0.8s ease-in-out, visibility 0.8s ease-in-out;
 }
 .contacts .icon-close {
   position: absolute;
@@ -1908,6 +2011,7 @@ body {
   border: none;
 }
 .contacts .contacts--none {
+  transform: translateX(-100%);
   visibility: hidden;
 }
 .contacts .contacts__name {
@@ -2010,7 +2114,7 @@ body {
 }
 
 .fill_btn {
-  transition: background-color 0.3s ease-in-out, border 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out, outline 0s ease-in-out;
 }
 
 .fill_btn:focus-visible {
@@ -2018,7 +2122,7 @@ body {
 }
 
 .fill_btn:hover {
-  border: 3px solid #CE4307;
+  outline: 3px solid #CE4307;
 }
 
 .fill_btn:active {
@@ -2145,6 +2249,10 @@ body {
   .contacts__adr {
     width: 350px;
   }
+  .contacts__btn-adress {
+    top: auto;
+    bottom: 50px;
+  }
   .contacts__tel {
     position: absolute;
     bottom: 19px;
@@ -2196,9 +2304,6 @@ body {
   .header__search {
     justify-self: auto;
     padding-left: calc(100% - 25px - var(--paddingContainer));
-  }
-  .header__form {
-    top: 35px;
   }
   .header .search-open {
     width: 23px;
@@ -2382,10 +2487,10 @@ body {
     width: calc(100% - var(--paddingContainer) * 3);
   }
   .header__list {
-    visibility: hidden;
+    display: none;
     position: absolute;
     top: 0;
-    left: 0;
+    left: -100%;
     right: 0;
     height: 100vh;
     grid-template: initial;
@@ -2395,7 +2500,18 @@ body {
     padding-left: var(--paddingContainer);
     justify-items: flex-start;
     margin-bottom: 212px;
-    transition: visibility 0.3s ease-in-out;
+    animation: burger 1s 1;
+    animation-fill-mode: forwards;
+    animation-delay: 0.3s;
+    transition: 1s;
+  }
+  @keyframes burger {
+    0% {
+      transform: none;
+    }
+    100% {
+      transform: translateX(100%);
+    }
   }
   .header__list .tel-head {
     display: block;
@@ -2416,7 +2532,7 @@ body {
     align-items: center;
   }
   .header .burger--active {
-    visibility: visible;
+    display: grid;
   }
   .header .close--active {
     display: block;
